Fix scrollbar-width property in Navbar.css

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -90,7 +90,7 @@
   background: #ffff;
   width: 450px;
   max-height: 250px;
-    scrollbar-width: "none";
+  scrollbar-width: none;
   top: 200%;
   overflow-y: hidden;
   left: 0;
